frontend.yaml
#deployment & service pour front
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend 
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: d4f-front:latest
        imagePullPolicy: Never  #pour utiliser l'image locale construite avec docker build
        ports:
        - containerPort: 4173
        # env:
        # - name: VITE_BACK_API_BASE_URL
        #   value: "http://d4f.local/backend" # via minikube service backend-service --url

--- #indique le debut d'un nouveau fichier yaml le service apres le deployment
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort    #service externe, exposé publiquement
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 4173
      targetPort: 4173
      nodePort: 30001  # port accessible depuis l'extérieur
