ingress.yaml
# ingress pour le front (sans rewrite)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: d4f-ingress-front
spec:
  ingressClassName: nginx
  rules:
  - host: d4f.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 4173

---
# ingress pour le back (avec rewrite)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: d4f-ingress-back
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: d4f.local
    http:
      paths:
      - path: /backend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 5000
